--- a/style.css
+++ b/style.css
@@ -56,11 +56,12 @@ nav > ul > li > a {
   position: relative;
 }
 .absolute {
+  width: 45rem;
   text-align: center;
   padding: 30px;
   position: absolute;
-  top: 50%;
-  left: 25%;
+  top: 35%;
+  left: 26%;
   background: rgba(13, 12, 12, 0.4);
   filter: blur(0.5px);
   border-radius: 20px;
@@ -74,4 +75,124 @@ nav > ul > li > a {
   background-color: var(--bg-color);
   color: var(--text-color);
   font-weight: bold;
+}
+.background {
+  /* background-image: url(assets/banner/bannerphoto1.svg); */
+  background: linear-gradient(0deg, rgba(238, 11, 11, 0.20) 0%, rgba(238, 11, 11, 0.20) 100%), url(assets/banner/bannerphoto1.svg), lightgray 0px -17.758px / 100% 133.263% no-repeat;
+  filter: blur(3px);
+  background-position: center;
+  background-size: 100% auto;
+  width: 100%;
+  height: 700px;
+}
+h3{
+  color: var(--bg-color);
+}
+.anuncio {
+  text-align: center;
+  position: absolute;
+  width: 500px;
+  top: 150px;
+  left: 30%;
+}
+.cartelera {
+  position: absolute;
+  bottom: -200px;
+  left: 100px;
+  width: 432px;
+  height: 400px;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.cartelera2 {
+  position: absolute;
+  bottom: -200px;
+  left: 500px;
+  width: 432px;
+  height: 400px;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.cartelera3 {
+  position: absolute;
+  bottom: -200px;
+  left: 900px;
+  width: 432px;
+  height: 400px;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.clearfix {
+  /* clear: both; */
+  height: 12rem;
+}
+.galeriatext{
+  color: var(--bg-color); 
+}
+.grid-layout{
+  display: grid; 
+  padding: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(5, 200px);
+  justify-content: space-around;
+  /* background: #444; */
+  width: 80%;
+  margin: 0 auto;
+  gap: 10px;
+  /* justify-content: space-between;
+  align-content: space-between; */
+}
+.caja img{
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.c1{
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+.c2{
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+.c3{
+  grid-column: 3/5;
+  grid-row: 1/2;
+}
+
+.c4{
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
+.c5{
+  grid-column: 3/4;
+  grid-row: 2/4;
+
+}
+.c6{
+  grid-column: 1/3;
+  grid-row: 3/5;
+
+}
+.c7{
+  grid-column: 1/2;
+  grid-row: 5/6;
+
+}
+.c8{
+  grid-column: 2/3;
+  grid-row: 5/6;
+}
+.c9{
+  grid-column: 3/4;
+  grid-row: 4/6;
 }
