--- a/style.css
+++ b/style.css
@@ -26,13 +26,15 @@ p {
 header {
   display: flex;
   justify-content: space-between;
-  background-color: var(--bg-color);
   height: 3rem;
 }
 picture {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+nav{
+background-color: var(--bg-color);
 }
 nav > ul {
   display: flex;
@@ -44,7 +46,7 @@ nav > ul > li {
   list-style: none;
   padding-right: 20px;
 }
-nav > ul > li > a {
+.text_nav{
   color: var(--text-color);
   text-decoration: none;
   font-weight: bold;
@@ -196,3 +198,10 @@ h3{
   grid-column: 3/4;
   grid-row: 4/6;
 }
+.contac{
+  list-style: none;
+}
+.contac li{
+  margin-bottom: 15px;
+}
+
