--- a/style.css
+++ b/style.css
@@ -12,13 +12,10 @@ p {
 }
 .title {
   color: var(--bg-color);
-  text-align: center;
-  font-family: "Poppins", sans-serif;
-  font-size: 60px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: normal;
-  margin-bottom: 50px;
+    font-family: "Poppins", sans-serif;
+    font-size: 1.9rem;
+    font-weight: 900;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.35);
 }
 .byn {
   filter: grayscale(100%);
@@ -34,7 +31,7 @@ picture {
   align-items: center;
 }
 nav{
-background-color: var(--bg-color);
+  background-color: var(--bg-color);
 }
 nav > ul {
   display: flex;
@@ -54,10 +51,15 @@ nav > ul > li {
 .btn {
   border-radius: 50px;
 }
+.fondo_servicios{
+  background-image: url(assets/banner/bannerphoto1.svg);
+  background-repeat: no-repeat;
+}
 .relative {
   position: relative;
 }
-.absolute {
+
+/* .absolute {
   width: 45rem;
   text-align: center;
   padding: 30px;
@@ -67,7 +69,7 @@ nav > ul > li {
   background: rgba(13, 12, 12, 0.4);
   filter: blur(0.5px);
   border-radius: 20px;
-}
+} */
 .boton {
   background-color: var(--text-color);
   color: var(--bg-color);
@@ -81,7 +83,7 @@ nav > ul > li {
 .background {
   /* background-image: url(assets/banner/bannerphoto1.svg); */
   background: linear-gradient(0deg, rgba(238, 11, 11, 0.20) 0%, rgba(238, 11, 11, 0.20) 100%), url(assets/banner/bannerphoto1.svg), lightgray 0px -17.758px / 100% 133.263% no-repeat;
-  filter: blur(3px);
+  /* filter: blur(3px); */
   background-position: center;
   background-size: 100% auto;
   width: 100%;
@@ -90,45 +92,49 @@ nav > ul > li {
 h3{
   color: var(--bg-color);
 }
+.fondo {
+  /* position: relative;
+  margin-bottom: 20rem; */
+  display:none;
+}
 .anuncio {
   text-align: center;
-  position: absolute;
-  width: 500px;
-  top: 150px;
-  left: 30%;
+  /* position: absolute; */
+  width: 100%;
+  margin: 0 auto;
+  /* top: 150px;
+  left: 30%; */
+}
+.carteleras{
+  
+  /* display: flex;
+  justify-content: space-between ;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px; */
+  /* bottom: -300px; */
+  
+}
+.checke{
+  font-size: 5rem;
+  text-align: center;
+}
+.icon{
+  font-size: 3rem;
+  /* text-align: center; */
+  margin: 0 auto;
+}
+.text_cartelera{
+  font-size: .6rem;
 }
 .cartelera {
-  position: absolute;
-  bottom: -200px;
-  left: 100px;
-  width: 432px;
-  height: 400px;
+  display: flex;
+  flex-direction: column;
+  height: 20rem;
+  font-size: .5rem;
+  min-width: 10rem;
+  max-width: 33%;
   padding: 20px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  background: #fff;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-.cartelera2 {
-  position: absolute;
-  bottom: -200px;
-  left: 500px;
-  width: 432px;
-  height: 400px;
-  padding: 20px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  background: #fff;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-.cartelera3 {
-  position: absolute;
-  bottom: -200px;
-  left: 900px;
-  width: 432px;
-  height: 400px;
-  padding: 20px;
-  margin-bottom: 20px;
   border-radius: 5px;
   background: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -144,10 +150,10 @@ h3{
   display: grid; 
   padding: 20px;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(5, 200px);
+  grid-template-rows: repeat(5, 1fr);
   justify-content: space-around;
   /* background: #444; */
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   gap: 10px;
   /* justify-content: space-between;
