--- a/style.css
+++ b/style.css
@@ -52,13 +52,22 @@ nav > ul > li {
   border-radius: 50px;
 }
 .fondo_servicios{
+  /* width: 100%; */
+  /* display: flex; */
+  /* height: 500px; */
+  position: relative;
   background-image: url(assets/banner/bannerphoto1.svg);
   background-repeat: no-repeat;
+  background-size: 100% cover;
+  background-position: center;
 }
-.relative {
-  position: relative;
+.title_service{
+  
+  font-size: 1.5rem;
 }
-
+.parrafo_service{
+  font-size: 1rem;
+}
 /* .absolute {
   width: 45rem;
   text-align: center;
@@ -98,21 +107,16 @@ h3{
   display:none;
 }
 .anuncio {
+  position: absolute;
   text-align: center;
-  /* position: absolute; */
-  width: 100%;
-  margin: 0 auto;
-  /* top: 150px;
-  left: 30%; */
 }
 .carteleras{
-  
-  /* display: flex;
-  justify-content: space-between ;
-  align-items: center;
+  /* position: absolute; */
+  display : flex;
+  justify-content: space-around;
   flex-wrap: wrap;
-  gap: 10px; */
-  /* bottom: -300px; */
+  gap: 10px;
+  margin-bottom: 50%;
   
 }
 .checke{
@@ -125,15 +129,19 @@ h3{
   margin: 0 auto;
 }
 .text_cartelera{
-  font-size: .6rem;
+  font-size: .7rem;
+  font-weight: 700;
 }
 .cartelera {
-  display: flex;
-  flex-direction: column;
-  height: 20rem;
-  font-size: .5rem;
-  min-width: 10rem;
+  position: relative; 
+   top: 200px;
+   display: flex;
+  flex-direction: column; 
+  /* height: 20rem; */
+  /* font-size: .5rem; */
+  min-width: 12rem;
   max-width: 33%;
+  /* gap: 2px; */
   padding: 20px;
   border-radius: 5px;
   background: #fff;
