--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ nav > ul > li {
 .btn {
   border-radius: 50px;
 }
+/* .recuadro {
+  width: 100%;
+  height: calc(100vh - 3rem);
+} */
 .fondo_servicios{
   /* width: 100%; */
   /* display: flex; */
@@ -113,7 +117,7 @@ h3{
 }
 .anuncio {
   position: absolute;
-  top: 50px;
+  top: 8%;
   text-align: center;
 }
 .carteleras{
@@ -228,4 +232,36 @@ h3{
 .contac li{
   margin-bottom: 15px;
 }
+@media screen and (min-width: 320px) {
+  .anuncio{
+    font-size: 8rem;
+  }
+  .carteleras{
+    margin-bottom: 40%;
+  }
+  
+}
+@media screen and (max-width: 320px) {
+  .carteleras{
+    margin-bottom: 80%;
+  }
+  
+}
 
+@media screen and (min-width: 748px) {
+  .carteleras{
+    margin-bottom: 25%;
+  }
+}
+@media screen and (min-width: 991px) {
+  .carteleras{
+    margin-bottom: 15%;
+  }
+  
+}
+@media screen and (min-width: 1200px) {
+  .carteleras{
+    margin-bottom: 5%;
+  }
+  
+}
