--- a/style.css
+++ b/style.css
@@ -123,7 +123,8 @@ h3{
 .carteleras{
   /* position: absolute; */
   display : flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   gap: 10px;
   margin-bottom: 65%;
@@ -150,10 +151,10 @@ h3{
   z-index: 5;
   /* height: 20rem; */
   /* font-size: .5rem; */
-  /* min-width: 12rem;*/
+  /* min-width: 12rem; */
   width: 47%;
   /* height: 140px; */
-  /* max-width: 33%;  */
+  max-width: 50%; 
   /* gap: 2px; */
   padding: 20px;
   border-radius: 5px;
@@ -171,20 +172,21 @@ h3{
   display: grid; 
   /* padding: 20px; */
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: repeat(5,1fr);
   /* justify-content: space-around; */
   /* background: #444; */
   /* width: 100%; */
   /* margin: 0 auto; */
-  height: 80%;
+  /* height: 80%; */
   gap: 5px;
   /* justify-content: space-between;
   align-content: space-between; */
 }
 .caja img{
-  display: block;
+  display: flex;
   width: 100%;
-  height: 100%;
+  height:  100%;
+  object-fit: fill;
 }
 .c1{
   grid-column: 1/2;
@@ -195,7 +197,7 @@ h3{
   grid-row: 1/2;
 }
 .c3{
-  grid-column: 3/5;
+  grid-column: 3/4;
   grid-row: 1/2;
 }
 
@@ -211,6 +213,7 @@ h3{
 .c6{
   grid-column: 1/3;
   grid-row: 3/5;
+  /* offset: 3; */
 
 }
 .c7{
@@ -247,6 +250,12 @@ h3{
   }
   
 }
+@media screen and (min-width: 321px) {
+  .carteleras{
+    margin-bottom: 15rem;
+  }
+  
+}
 
 @media screen and (min-width: 748px) {
   .carteleras{
@@ -260,8 +269,28 @@ h3{
   
 }
 @media screen and (min-width: 1200px) {
-  .carteleras{
-    margin-bottom: 5%;
+  .fondo_servicios{
+    margin-bottom: 20%;
   }
   
+  .carteleras{
+    margin-bottom: 5%;
+    width: 50%;
+    position: relative;
+    top: 70px;
+    left: 300px;
+    /* flex-wrap: nowrap; */
+  }
+  .anuncio{
+    
+    margin: auto;
+    /* font-size: 3rem; */
+  }
+  .parrafo_service{
+    font-size: 1.5rem;
+  }
+  .galeria-cuadro{
+    width: 70%;
+    /* height: 400px; */
+  }
 }
